--- a/fid_drift_mon/data/index_template.html
+++ b/fid_drift_mon/data/index_template.html
@@ -28,7 +28,7 @@
           The first three factors are nearly degenerate.
 
           Only the last factor (FTS alignment drift) produces a change in the
-          boresight calibration (i.e. celestial location offset)
+          boresight calibration (i.e. celestial location offset).
 
           <h4> Fid light drifts (Updated <!--#CONFIG TIMEFMT="%x"--><!--#flastmod file="drift_acis_s.png"-->)</h4>
 
