Update text for median offset calc

--- a/fid_drift_mon/data/index_template.html
+++ b/fid_drift_mon/data/index_template.html
@@ -37,8 +37,8 @@
           The last 4 ksec of data are used, to minimize scatter due to thermal
           transients.  Then a median centroid position is calculated for each
           fid light.  Finally, for each science instrument and fid light, the
-          "drift" is calculated by removing both the mean centroid for that fid
-          light (over observations in early 2003) and the SIM-Z offset (for
+          "drift" is calculated by removing both the median centroid offset for that fid
+          light (over observations from 2010 to 2020) and the SIM-Z offset (for
           that observation).
 
           In the plots below, different colors and symbols represent the different fid
